--- a/css/styles.css
+++ b/css/styles.css
@@ -86,8 +86,15 @@ box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
     background: #4d5ae5;
     color: #ffffff
  background-color: #404BBF
+font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.04em;
+cursor: pointer;
 }
-
+.hero-btn:hover:focus {
+    color: #404bbf
+}
 .features {
 
 }
@@ -123,7 +130,7 @@ font-weight: 400;
 }
 
 .team {
-
+background-color: #F4F4FD
 }
 
 .team-title {
