--- a/css/styles.css
+++ b/css/styles.css
@@ -187,13 +187,14 @@ font-weight: 400;
         letter-spacing: 0.02em;
         text-align: center;
         color: #2e2f42;
+        text-transform:capitalize;
 }
 .card-title{
 font-weight: 500;
     font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
+    letter-spacing: 0.02em
     color: #2e2f42;
+    line-height: 1.5;
 }
 .portfolio-list {
 background-color: #fff;
@@ -232,7 +233,7 @@ background-color: #2e2f42;
         color: #f4f4fd;
         font-family: "Raleway", sans-serif;
 }
-.footer-text{
+.footer-text {
     font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
