--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,10 @@ font-weight: 700;
     color: #2e2f42;
 
 }
+.logo-colour:hover {
+color: #404bbf;
+
+}
     
 
 .header-menu {
@@ -103,8 +107,11 @@ line-height: 1.5;
 letter-spacing: 0.04em;
 cursor: pointer;
 }
-.hero-btn:hover:focus {
-    color: #404bbf
+.hero-btn:hover {
+    background-color: #404bbf
+}
+.hero-btn:focus {
+background-color: #404BBF
 }
 .features {
 
@@ -180,7 +187,7 @@ font-weight: 400;
     color: #434455;
 }
 
-.portfolio-title{
+.portfolio-title {
     
         font-size: 36px;
         line-height: 1.11;
@@ -189,15 +196,17 @@ font-weight: 400;
         color: #2e2f42;
         text-transform:capitalize;
 }
-.card-title{
+.card-title {
 font-weight: 500;
     font-size: 20px;
-    letter-spacing: 0.02em
+    letter-spacing: 0.02em;
     color: #2e2f42;
-    line-height: 1.5;
+    line-height: 1.2;
 }
 .portfolio-list {
 background-color: #fff;
+}
+
 
 .portfolio-card {
 
