--- a/css/styles.css
+++ b/css/styles.css
@@ -11,11 +11,17 @@ background-color: #fff;
 font-family: "Raleway", sans-serif;
     font-weight: 700;
     font-size: 18px;
-    line-height: 1.17;
+    line-height: 1.17
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
    
+}
+.logo:hover {
+    color: #404bbf;
+}
+.logo:focus {
+    color: #404bbf;
 }
 .logo-colour {
 font-weight: 700;
@@ -44,9 +50,13 @@ font-weight: 500;
     color: #2e2f42;
     
 }
-.header-menu-item:hover:focus {
-    color: #404bbf;
+.header-menu-item:hover {
+color: #404bbf;
 }
+ .header-menu-item:focus {
+    color: #404bbf;
+ }   
+
 
 .header-menu-link {
 font-weight: 500;
@@ -236,10 +246,10 @@ background-color: #2e2f42;
 .logo {
     font-weight: 700;
         font-size: 18px;
-        line-height: 1.16667;
+        line-height: 1.17;
         letter-spacing: 0.03em;
         text-transform: uppercase;
-        color: #f4f4fd;
+        color: #4d5ae5;
         font-family: "Raleway", sans-serif;
 }
 .footer-text {
