--- a/css/styles.css
+++ b/css/styles.css
@@ -257,3 +257,9 @@ background-color: #2e2f42;
 .logo-colour {
 color: #f4f4fd;
 }
+.header-menu-link1:hover {
+    color: #404bbf;
+}
+.address-menu-link1:focus {
+    color: #404bbf;
+}
